--- a/_pages/exhibition/2023-10.md
+++ b/_pages/exhibition/2023-10.md
@@ -8,7 +8,7 @@ permalink: /expo/10
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "Scratch" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://scratch.mit.edu/projects/661312780/" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://scratch.mit.edu/projects/661312780/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
@@ -22,7 +22,7 @@ permalink: /expo/10
 {% endcomment %}
 
 <img class='top-img lazyload' src='../img/2023/exhibition/10.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-<p>クリエイター:えんどうまめ(奈良)</p>
+<p>クリエイター:えんどうまめ(CoderDojo 奈良)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
