--- a/_pages/exhibition/2023-14.md
+++ b/_pages/exhibition/2023-14.md
@@ -8,7 +8,7 @@ permalink: /expo/14
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "電子工作（Raspberry Pi、Arduino、micro:bitなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "電子工作" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://youtu.be/wDVRVy8kfw4?si=iprBYbr_2ywtT6WD" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://youtu.be/wDVRVy8kfw4?si=iprBYbr_2ywtT6WDembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
@@ -22,7 +22,7 @@ permalink: /expo/14
 {% endcomment %}
 
 <img class='top-img lazyload' src='../img/2023/exhibition/14.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-<p>クリエイター:あやめ(CoderDojo Owari)</p>
+<p>クリエイター:あやめ(CoderDojo 尾張)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
