--- a/_pages/exhibition/2023-16.md
+++ b/_pages/exhibition/2023-16.md
@@ -8,7 +8,7 @@ permalink: /expo/16
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "マインクラフト（ワールド、レッドストーン回路、MakeCode、Modなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "マインクラフト" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://www.youtube.com/watch?v=ELKJmNPu9yg" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://www.youtube.com/watch?v=ELKJmNPu9ygembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
@@ -22,7 +22,7 @@ permalink: /expo/16
 {% endcomment %}
 
 <img class='top-img lazyload' src='../img/2023/exhibition/16.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-<p>クリエイター:けんちゃん()</p>
+<p>クリエイター:けんちゃん(CoderDojo )</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
