--- a/_pages/exhibition/2023-17.md
+++ b/_pages/exhibition/2023-17.md
@@ -8,7 +8,7 @@ permalink: /expo/17
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "電子工作（Raspberry Pi、Arduino、micro:bitなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "電子工作" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://ibb.co/WGxZCxS" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://ibb.co/WGxZCxSembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
@@ -22,7 +22,7 @@ permalink: /expo/17
 {% endcomment %}
 
 <img class='top-img lazyload' src='../img/2023/exhibition/17.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-<p>クリエイター:ショーピー256(CoderDojo 倉敷　CoderDojo 吉備岡山)</p>
+<p>クリエイター:ショーピー256(CoderDojo 倉敷,吉備岡山)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
