--- a/_pages/exhibition/2023-3.md
+++ b/_pages/exhibition/2023-3.md
@@ -8,7 +8,7 @@ permalink: /expo/3
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "ロボット（toio、LEGO、アーテックなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "ロボット" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://youtu.be/Cl0zPaBE8TE" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://youtu.be/Cl0zPaBE8TEembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
@@ -22,7 +22,7 @@ permalink: /expo/3
 {% endcomment %}
 
 <img class='top-img lazyload' src='../img/2023/exhibition/3.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-<p>クリエイター:元気な深川っ子(CoderDojo長門)</p>
+<p>クリエイター:元気な深川っ子(CoderDojo 長門)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
