--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -8,10 +8,10 @@ permalink: /expo/4
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "Webサイト（HTML/CSS、JavaScript、Pythonなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
-{% if "https://youtu.be/0UymyW3Khu8" contains "https://scratch.mit.edu/projects/" %}
+{% if "Webサイト" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "https://www.youtube.com/watch?v=Tm5P76jfjuk" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
-<iframe src="https://youtu.be/0UymyW3Khu8embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/watch?v=Tm5P76jfjukembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
 <img class='top-img lazyload' src='../img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
@@ -22,7 +22,7 @@ permalink: /expo/4
 {% endcomment %}
 
 <img class='top-img lazyload' src='../img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-<p>クリエイター:がんにゃむ(奈良)</p>
+<p>クリエイター:がんにゃむ(CoderDojo 奈良)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
@@ -34,7 +34,7 @@ permalink: /expo/4
   </div>
 </div>
 </div>
-<a href="https://youtu.be/0UymyW3Khu8" target="_blank" rel="noopener" class="button air">作品URL</a>
+<a href="https://www.youtube.com/watch?v=Tm5P76jfjuk" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
   .prev { display: table-cell; color: white; text-align: left;   }
