--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -31,12 +31,16 @@ description: 鍵の表記の仕方が「ROT+数字」なのでプログラムを
 </div>
 
 <div>
-  <a href="https://scratch.mit.edu/projects/706260024/" target="_blank" rel="noopener" class="button" style="margin-bottom: 50px;">
+  <a href="https://scratch.mit.edu/projects/706260024/" target="_blank" rel="noopener" class="button">
     <i class="fas fa-scroll"></i>
     作品を見る
   </a>
-  <a href="https://twitter.com/intent/tweet?text={{ page.title | replace: '&', '%26' }}+%7C+ニンジャ大博覧会&hashtags=DojoConJapan,CoderDojo&url={{ site.url }}/expo/9&lang=jp&related=DojoConJapan" target="_blank" rel="noopener" class="button">
+  <a href="https://twitter.com/intent/tweet?text={{ page.title | replace: '&', '%26' }}+%7C+ニンジャ大博覧会&hashtags=DojoConJapan,CoderDojo&url={{ site.url }}/expo/9&lang=jp&related=DojoConJapan" target="_blank" rel="noopener" class="button" style="margin: 50px auto;">
     <i class="fab fa-twitter"></i>
+    作品を共有する
+  </a>
+  <a href="https://www.facebook.com/share.php?u={{ site.url }}/expo/9" target="_blank" rel="noopener" class="button">
+    <i class="fab fa-facebook"></i>
     作品を共有する
   </a>
 </div>
